[package]
name = "ac1"
version = "0.1.0"
authors = ["artie <atch.cpp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive_core = { version = "0.1", default-features = false }

#[dev-dependencies]
cursive = "0.15"
rand = "0.7"
cursive_table_view = {git = "https://github.com/BonsaiDen/cursive_table_view"}
chrono = "^0"
cursive_buffered_backend = { git = "https://github.com/agavrilov/cursive_buffered_backend"}
termion = "*"